force-app/main/default/objects/Historical_transaction__c/Historical_transaction__c.object-meta.xml
<CustomObject>
    <description>this is a test record for invoices from netsuite</description>
    <label>Historical Transaction</label>
    <nameField>
        <label>Historical Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historical Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>