force-app/main/default/objects/Historical_transaction__c/fields/Auto_Mail_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Auto_Mail_Invoice__c</fullName>
    <label>Auto Mail Invoice</label>
    <type>Date</type>
</CustomField>