force-app/main/default/objects/Historical_transaction__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <label>Bill To</label>
    <type>TextArea</type>
</CustomField>