force-app/main/default/objects/Historical_transaction__c/fields/Created_From__c.field-meta.xml
<CustomField>
    <fullName>Created_From__c</fullName>
    <label>Created From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>