force-app/main/default/objects/Historical_transaction__c/fields/Date_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Payment__c</fullName>
    <label>Date of Payment</label>
    <type>Date</type>
</CustomField>