force-app/main/default/objects/Historical_transaction__c/fields/Date_Of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Shipment__c</fullName>
    <label>Date of Shipment</label>
    <type>Date</type>
</CustomField>