force-app/main/default/objects/Historical_transaction__c/fields/E_Mail_within_Invoice__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_within_Invoice__c</fullName>
    <label>E-Mail within Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>