force-app/main/default/objects/Historical_transaction__c/fields/End_Service_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Service_Time__c</fullName>
    <label>End Service Time</label>
    <type>Date</type>
</CustomField>