force-app/main/default/objects/Historical_transaction__c/fields/Language_Customer__c.field-meta.xml
<CustomField>
    <fullName>Language_Customer__c</fullName>
    <label>Language Customer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>