force-app/main/default/objects/Historical_transaction__c/fields/NetSuite_Link__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Link__c</fullName>
    <label>NetSuite Link</label>
    <type>Url</type>
</CustomField>