force-app/main/default/objects/Historical_transaction__c/fields/Posting_Period__c.field-meta.xml
<CustomField>
    <fullName>Posting_Period__c</fullName>
    <label>Posting Period</label>
    <length>80</length>
    <type>Text</type>
</CustomField>