force-app/main/default/objects/Historical_transaction__c/fields/Start_Service_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Service_Time__c</fullName>
    <label>Start Service Time</label>
    <type>Date</type>
</CustomField>