force-app/main/default/objects/Historical_transaction__c/recordTypes/Legacy_Credit_Memo.recordType-meta.xml
<RecordType>
    <fullName>Legacy_Credit_Memo</fullName>
    <active>true</active>
    <label>Legacy Credit Memo</label>
</RecordType>