force-app/main/default/objects/Historical_transaction__c/recordTypes/Legacy_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Legacy_Invoice</fullName>
    <active>true</active>
    <description>test for netsuite invoices</description>
    <label>Legacy Invoice</label>
</RecordType>