force-app/main/default/objects/Historical_transaction__c/recordTypes/Legacy_Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>Legacy_Sales_Order</fullName>
    <active>true</active>
    <label>Legacy Sales Order</label>
</RecordType>